# conway.svc

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
src/conway/application/: application.py  application_config.py
src/conway/database/: data_accessor.py  data_hub.py  database_manifest.py  single_root_data_hub.py
src/conway/dataset/: any_of_filter.py  dataframe_dataset_content.py  dataset.py  dataset_content.py  dataset_identity.py  enum_field.py  field.py  slice_dataset_identity.py  slice_definition.py  static_dataset_identity.py  timestamped_dataset_identity.py  unbounded_field.py
src/conway/observability/: logger.py
src/conway/projector/: chain_sampler.py  database_projector.py  filter_sampler.py  first_found_sampler.py  random_sampler.py  sampler.py
src/conway/reports/: report_writer.py
src/conway/util/: case_utils.py  command_parser.py  dataframe_utils.py  parallelizer.py  path_utils.py  profiler.py  timestamp.py  warnings_filter.py  yaml_utils.py
