[metadata]
name = conway

# Versioning numbers try to follow PEP 440
# https://www.python.org/dev/peps/pep-0440/
version = 0.1
#version = dev

author = Alejandro Hernandez
author_email = alejandro@finastra.com
license = MIT
description = Chassis for assembling a multitude of Enterprise Architecture projects involving data pipelines using Excel as input and outut
long_description = file: README.md
long_description_content_type = text/markdown
url = # TODO 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    notebook >=6.5.2        # Needed so that Jupyter notebooks use this virtual env and Python version consistently
    toml >=0.10.2
    xlsxwriter >=3.0.3      # Needed to write user-friendly-formatted Excel spreadsheets
    gitypython >=3.1
    pandas >=1.5.3
    requests >=2.29

[options.packages.find]
where = src

[options.package_data]

[options.entry_points]
console_scripts =
    # TODO ea = apodeixi.cli.apo_cli:apo_cli

